modifierd This Site

--- a/Categoris.html
+++ b/Categoris.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="Categories.css" />
+    <link rel="stylesheet" href="/Css/Categories.css" />
+    <link rel="stylesheet" href="/Css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- ? Start container header-section -->
     <div class="container header-section">
       <div class="logo-container">
         <ul>
@@ -42,17 +43,16 @@
         </ul>
       </div>
     </div>
-    
+    <!-- ? End container header-section -->
+    <!--? Start Shop by Categories -->
+
     <div class="container Shop by Categories">
       <h2 class="Shop-by-Categories-titel">Shop by Categories</h2>
 
       <div class="Shop-by-Categories-titel-grid">
         <div class="Electronic">
           <figure>
-            <img
-              src="/public image section/Product categ/Electronics.png"
-              alt=""
-            />
+            <img src="/Image/Electronics.png" alt="Electronics" />
           </figure>
           <div class="content-conteiner">
             <h3>Electronics</h3>
@@ -61,7 +61,7 @@
         </div>
         <div class="Fashion">
           <figure>
-            <img src="/public image section/Product categ/Fashion.png" alt="" />
+            <img src="/Image/Fashion.png" alt="Fashion" />
           </figure>
           <div class="content-conteiner">
             <h3>Fashion</h3>
@@ -70,10 +70,7 @@
         </div>
         <div class="Home & Kitchen">
           <figure>
-            <img
-              src="/public image section/Product categ/Home & Kitchen.png"
-              alt=""
-            />
+            <img src="/Image/Kitchen.png" alt="Kitchen" />
           </figure>
           <div class="content-conteiner">
             <h3>Home & Kitchen</h3>
@@ -82,7 +79,7 @@
         </div>
         <div class="Beauty">
           <figure>
-            <img src="/public image section/Product categ/Beauty.png" alt="" />
+            <img src="/Image/Beauty.png" alt="Beauty" />
           </figure>
           <div class="content-conteiner">
             <h3>Beauty</h3>
@@ -91,10 +88,7 @@
         </div>
         <div class="Mens-Black-Cap">
           <figure>
-            <img
-              src="/public image section/Product categ/Mens Black Cap.png"
-              alt=""
-            />
+            <img src="/Image/Cap.png" alt="Cap" />
           </figure>
           <div class="content-conteiner">
             <h3>Mens Black Cap</h3>
@@ -103,10 +97,7 @@
         </div>
         <div class="Technic-Makeup-Spray">
           <figure>
-            <img
-              src="/public image section/Product categ/Technic  Spray.png"
-              alt=""
-            />
+            <img src="/Image/Technic.png" alt="" />
           </figure>
           <div class="content-conteiner">
             <h3>Technic Makeup Spray</h3>
@@ -115,10 +106,7 @@
         </div>
         <div class="Detergent-Powder">
           <figure>
-            <img
-              src="/public image section/Product categ/Detergent Powder.png"
-              alt=""
-            />
+            <img src="/Image/Detergent.png" alt="Detergent" />
           </figure>
           <div class="content-conteiner">
             <h3>Detergent Powder</h3>
@@ -127,10 +115,7 @@
         </div>
         <div class="sparkling-water">
           <figure>
-            <img
-              src="/public image section/Product categ/sparkling water.png"
-              alt=""
-            />
+            <img src="/Image/sparklingr.png" alt="sparklingr" />
           </figure>
           <div class="content-conteiner">
             <h3>sparkling-water</h3>
@@ -139,5 +124,51 @@
         </div>
       </div>
     </div>
+    <!--? End Shop by Categories -->
+
+    <!--? Start Limited Time Offer -->
+    <div class="Limited-Time-Offer">
+      <div class="hero-content">
+        <h2>Limited Time Offer</h2>
+        <h1>Get 30% Off</h1>
+        <p>On all fashion items. Use code: FASHION30</p>
+        <div class="Offer">
+          <button class="animated-btn shope-new magnifying">shope new</button>
+        </div>
+      </div>
+    </div>
+
+    <!--? End Limited Time Offer -->
+    <!-- ? Start Footre Section -->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <h3>About Us</h3>
+          <p>
+            We provide high-quality resources and learning materials for web
+            developers.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <p>Email: mdrashed462478@gmail.com</p>
+          <p>Phone: 01992284845</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Rashedul Islam. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <!-- ? End Footre Section -->
   </body>
 </html>
