--- a/Customers.html
+++ b/Customers.html
@@ -12,8 +12,8 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="Our Customers.css" />
+    <link rel="stylesheet" href="/Css/Customers.css" />
+    <link rel="stylesheet" href="/Css/index.css" />
   </head>
   <body>
     <div class="container header-section">
@@ -48,25 +48,70 @@
       <div class="testimonial grid-two-cols">
         <div class="numberOner">
           <figure>
-            <img src="/public image section/Testimonial/1.png" alt="" />
+            <img src="/Image/0 (1).png" alt="" />
           </figure>
         </div>
         <div class="number2">
           <figure>
-            <img src="/public image section/Testimonial/2.png" alt="" />
+            <img src="/Image/0 (2).png" alt="" />
           </figure>
         </div>
         <div class="number3">
           <figure>
-            <img src="/public image section/Testimonial/3.png" alt="" />
+            <img src="/Image/0 (3).png" alt="" />
           </figure>
         </div>
         <div class="number4">
           <figure>
-            <img src="/public image section/Testimonial/4.png" alt="" />
+            <img src="/Image/0 (4).png" alt="" />
           </figure>
         </div>
       </div>
     </div>
+
+    <!--? Start Limited Time Offer -->
+    <div class="Limited-Time-Offer">
+      <div class="hero-content">
+        <h2>Limited Time Offer</h2>
+        <h1>Get 30% Off</h1>
+        <p>On all fashion items. Use code: FASHION30</p>
+        <div class="Offer">
+          <button class="animated-btn shope-new magnifying">shope new</button>
+        </div>
+      </div>
+    </div>
+
+    <!--? End Limited Time Offer -->
+    <!-- ? Start Footre Section -->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <h3>About Us</h3>
+          <p>
+            We provide high-quality resources and learning materials for web
+            developers.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <p>Email: mdrashed462478@gmail.com</p>
+          <p>Phone: 01992284845</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Rashedul Islam. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <!-- ? End Footre Section -->
   </body>
 </html>
