--- a/Shop.html
+++ b/Shop.html
@@ -12,10 +12,11 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="shop.css" />
+    <link rel="stylesheet" href="/Css/shop.css" />
+    <link rel="stylesheet" href="/Css/index.css" />
   </head>
   <body>
+    <!-- ? Start container header-section -->
     <div class="container header-section">
       <div class="logo-container">
         <ul>
@@ -43,7 +44,10 @@
         </ul>
       </div>
     </div>
-    
+    <!-- ? End container header-section -->
+
+    <!-- ? Start Featured Products -->
+
     <div class="container Featured-Products-container">
       <h2 class="Featured-Products">Featured Products</h2>
 
@@ -52,10 +56,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/1.png"
-                  alt=""
-                />
+                <img src="/Image/1.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -93,14 +94,12 @@
             </div>
           </div>
         </div>
+
         <div class="add-to-card-2">
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/2.png"
-                  alt=""
-                />
+                <img src="/Image/2.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -118,10 +117,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$50</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$60</span>
               </div>
             </div>
             <div class="star">
@@ -143,10 +142,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/4.png"
-                  alt=""
-                />
+                <img src="/Image/3.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -164,10 +160,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$120</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$135</span>
               </div>
             </div>
             <div class="star">
@@ -188,10 +184,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/3.png"
-                  alt=""
-                />
+                <img src="/Image/4.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -209,10 +202,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$550</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$600</span>
               </div>
             </div>
             <div class="star">
@@ -234,10 +227,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/6.png"
-                  alt=""
-                />
+                <img src="/Image/6.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -255,10 +245,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$100</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$120</span>
               </div>
             </div>
             <div class="star">
@@ -279,10 +269,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/7.png"
-                  alt=""
-                />
+                <img src="/Image/7.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -300,10 +287,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$109.99</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$120</span>
               </div>
             </div>
             <div class="star">
@@ -324,10 +311,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/8.png"
-                  alt=""
-                />
+                <img src="/Image/8.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -345,10 +329,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$70</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$100</span>
               </div>
             </div>
             <div class="star">
@@ -369,10 +353,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/9.png"
-                  alt=""
-                />
+                <img src="/Image/10.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -390,10 +371,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$25</span>
+                <span>$250</span>
               </div>
               <div class="old">
-                <span>$35</span>
+                <span>$300</span>
               </div>
             </div>
             <div class="star">
@@ -415,10 +396,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/10.png"
-                  alt=""
-                />
+                <img src="/Image/9.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -436,10 +414,10 @@
             <h3>Miss Lara Blush & Highlighter 3 in 1</h3>
             <div class="product-price">
               <div class="new">
-                <span>$36</span>
+                <span>$40</span>
               </div>
               <div class="old">
-                <span>$55</span>
+                <span>$60</span>
               </div>
             </div>
             <div class="star">
@@ -458,5 +436,51 @@
         </div>
       </div>
     </div>
+    <!-- ? End Featured Products -->
+
+    <!--? Start Limited Time Offer -->
+    <div class="Limited-Time-Offer">
+      <div class="hero-content">
+        <h2>Limited Time Offer</h2>
+        <h1>Get 30% Off</h1>
+        <p>On all fashion items. Use code: FASHION30</p>
+        <div class="Offer">
+          <button class="animated-btn shope-new magnifying">shope new</button>
+        </div>
+      </div>
+    </div>
+
+    <!--? End Limited Time Offer -->
+    <!-- ? Start Footre Section -->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <h3>About Us</h3>
+          <p>
+            We provide high-quality resources and learning materials for web
+            developers.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <p>Email: mdrashed462478@gmail.com</p>
+          <p>Phone: 01992284845</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Rashedul Islam. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <!-- ? End Footre Section -->
   </body>
 </html>
