--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/Css/index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -89,20 +89,22 @@
         <ul>
           <li class="nav-var-section"><a href="/index.html">Home</a></li>
           <li class="nav-var-section">
-            <a href="Shop.html">Shop</a>
+            <a href="/Shop.html">Shop</a>
           </li>
           <li class="nav-var-section">
             <a href="/Categoris.html">Categoris</a>
           </li>
           <li class="nav-var-section">
-            <a href="Our Customers.html">Our Customers</a>
+            <a href="/Customers.html">Our Customers</a>
           </li>
           <li class="nav-var-section"><a href="AboutUs.html">About Us</a></li>
           <li class="nav-var-section"><a href="contact.html">Contuct Us</a></li>
         </ul>
       </div>
-      <!-- ? End navbar section -->
     </div>
+
+    <!-- ? End navbar section -->
+
     <!--  ? start main cover content -->
     <div class="main-cover-container">
       <div class="hero-content">
@@ -126,10 +128,7 @@
       <div class="Shop-by-Categories-titel-grid">
         <div class="Electronic">
           <figure>
-            <img
-              src="/public image section/Product categ/Electronics.png"
-              alt=""
-            />
+            <img src="/Image/Electronics.png" alt="Electronics" />
           </figure>
           <div class="content-conteiner">
             <h3>Electronics</h3>
@@ -138,7 +137,7 @@
         </div>
         <div class="Fashion">
           <figure>
-            <img src="/public image section/Product categ/Fashion.png" alt="" />
+            <img src="/Image/Fashion.png" alt="Fashion" />
           </figure>
           <div class="content-conteiner">
             <h3>Fashion</h3>
@@ -147,10 +146,7 @@
         </div>
         <div class="Home & Kitchen">
           <figure>
-            <img
-              src="/public image section/Product categ/Home & Kitchen.png"
-              alt=""
-            />
+            <img src="/Image/Kitchen.png" alt="Kitchen" />
           </figure>
           <div class="content-conteiner">
             <h3>Home & Kitchen</h3>
@@ -159,7 +155,7 @@
         </div>
         <div class="Beauty">
           <figure>
-            <img src="/public image section/Product categ/Beauty.png" alt="" />
+            <img src="/Image/Beauty.png" alt="Beauty" />
           </figure>
           <div class="content-conteiner">
             <h3>Beauty</h3>
@@ -168,10 +164,7 @@
         </div>
         <div class="Mens-Black-Cap">
           <figure>
-            <img
-              src="/public image section/Product categ/Mens Black Cap.png"
-              alt=""
-            />
+            <img src="/Image/Cap.png" alt="Cap" />
           </figure>
           <div class="content-conteiner">
             <h3>Mens Black Cap</h3>
@@ -180,10 +173,7 @@
         </div>
         <div class="Technic-Makeup-Spray">
           <figure>
-            <img
-              src="/public image section/Product categ/Technic  Spray.png"
-              alt=""
-            />
+            <img src="/Image/Technic.png" alt="" />
           </figure>
           <div class="content-conteiner">
             <h3>Technic Makeup Spray</h3>
@@ -192,10 +182,7 @@
         </div>
         <div class="Detergent-Powder">
           <figure>
-            <img
-              src="/public image section/Product categ/Detergent Powder.png"
-              alt=""
-            />
+            <img src="/Image/Detergent.png" alt="Detergent" />
           </figure>
           <div class="content-conteiner">
             <h3>Detergent Powder</h3>
@@ -204,10 +191,7 @@
         </div>
         <div class="sparkling-water">
           <figure>
-            <img
-              src="/public image section/Product categ/sparkling water.png"
-              alt=""
-            />
+            <img src="/Image/sparklingr.png" alt="sparklingr" />
           </figure>
           <div class="content-conteiner">
             <h3>sparkling-water</h3>
@@ -228,10 +212,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/1.png"
-                  alt=""
-                />
+                <img src="/Image/1.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -269,14 +250,12 @@
             </div>
           </div>
         </div>
+
         <div class="add-to-card-2">
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/2.png"
-                  alt=""
-                />
+                <img src="/Image/2.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -319,10 +298,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/4.png"
-                  alt=""
-                />
+                <img src="/Image/3.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -364,10 +340,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/3.png"
-                  alt=""
-                />
+                <img src="/Image/4.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -410,10 +383,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/6.png"
-                  alt=""
-                />
+                <img src="/Image/6.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -455,10 +425,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/7.png"
-                  alt=""
-                />
+                <img src="/Image/7.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -500,10 +467,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/8.png"
-                  alt=""
-                />
+                <img src="/Image/8.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -545,10 +509,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/9.png"
-                  alt=""
-                />
+                <img src="/Image/10.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -591,10 +552,7 @@
           <div class="image">
             <div class="product-image">
               <figure>
-                <img
-                  src="public image section/Featured Products/10.png"
-                  alt=""
-                />
+                <img src="/Image/9.png" alt="" />
               </figure>
             </div>
             <div class="image-discription">
@@ -636,7 +594,7 @@
     </div>
     <!-- ? End Featured Products -->
 
-    <!--? Limited Time Offer -->
+    <!--? Start Limited Time Offer -->
     <div class="Limited-Time-Offer">
       <div class="hero-content">
         <h2>Limited Time Offer</h2>
@@ -648,33 +606,37 @@
       </div>
     </div>
 
+    <!--? End Limited Time Offer -->
+
+    <!-- ? What-Our-Customers-Say -->
+
     <div class="What-Our-Customers-Say">
       <h2>What Our Customers Say</h2>
       <div class="testimonial grid-two-cols">
         <div class="numberOner">
           <figure>
-            <img src="/public image section/Testimonial/1.png" alt="" />
+            <img src="/Image/0 (1).png" alt="" />
           </figure>
         </div>
         <div class="number2">
           <figure>
-            <img src="/public image section/Testimonial/2.png" alt="" />
+            <img src="/Image/0 (2).png" alt="" />
           </figure>
         </div>
         <div class="number3">
           <figure>
-            <img src="/public image section/Testimonial/3.png" alt="" />
+            <img src="/Image/0 (3).png" alt="" />
           </figure>
         </div>
         <div class="number4">
           <figure>
-            <img src="/public image section/Testimonial/4.png" alt="" />
+            <img src="/Image/0 (4).png" alt="" />
           </figure>
         </div>
       </div>
     </div>
 
-    <!--? Subscribe to Our Newsletter -->
+    <!--? Start Subscribe to Our Newsletter -->
 
     <div class="Subscribe-yournewsletter">
       <h2>Subscribe to Our Newsletter</h2>
@@ -685,6 +647,10 @@
         <button class="Subscribe-btn">Subscribe</button>
       </div>
     </div>
+
+    <!--? End Subscribe to Our Newsletter -->
+
+    <!-- ? Start Footre Section -->
     <footer class="site-footer">
       <div class="footer-container">
         <div class="footer-about">
@@ -714,6 +680,8 @@
       </div>
     </footer>
 
-    <script src="main.js"></script>
+    <!-- ? End Footre Section -->
+
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
