--- a/AboutUs.html
+++ b/AboutUs.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="AboutUs.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/Css/AboutUs.css" />
+    <link rel="stylesheet" href="/Css/index.css" />
   </head>
   <body>
     <div class="container header-section">
@@ -85,5 +85,50 @@
         </p>
       </div>
     </section>
+
+    <!--? Start Limited Time Offer -->
+    <div class="Limited-Time-Offer">
+      <div class="hero-content">
+        <h2>Limited Time Offer</h2>
+        <h1>Get 30% Off</h1>
+        <p>On all fashion items. Use code: FASHION30</p>
+        <div class="Offer">
+          <button class="animated-btn shope-new magnifying">shope new</button>
+        </div>
+      </div>
+    </div>
+
+    <!--? End Limited Time Offer -->
+    <!-- ? Start Footre Section -->
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-about">
+          <h3>About Us</h3>
+          <p>
+            We provide high-quality resources and learning materials for web
+            developers.
+          </p>
+        </div>
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-contact">
+          <h3>Contact</h3>
+          <p>Email: mdrashed462478@gmail.com</p>
+          <p>Phone: 01992284845</p>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Rashedul Islam. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <!-- ? End Footre Section -->
   </body>
 </html>
