--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <div class="contact-number">
           <ul class="contact-with-phone-Email">
             <li>
-              <a href="#"><i class="fa-solid fa-phone"></i> 01992284845</a>
+              <a href="/index.html"
+                ><i class="fa-solid fa-phone"></i> 01992284845</a
+              >
             </li>
             <li>
-              <a href="'#"
+              <a href="/index.html"
                 ><i class="fa-solid fa-envelope"></i>
                 mdrashed462478@gmail.com</a
               >
@@ -60,7 +62,9 @@
         <div class="logo-container">
           <ul>
             <li>
-              <h2 class="main-logo">Shop Hu<samp>B</samp></h2>
+              <h2 class="main-logo">
+                <a href="/index.html">Shop Hu<samp>B</samp></a>
+              </h2>
             </li>
           </ul>
         </div>
