Shop hub E-commerce site

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <button class="animated-btn shope-new magnifying">shope new</button>
         <button class="animated-btn Contact Us shope-new magnifying">
-          <a href="Contact Us">Contact Us</a>
+          <a href="/contact.html">Contact Us</a>
         </button>
       </div>
     </div>
